Fixed the use case to create a new ofuscation
